- разбил  html на блоки  - внес изменения в галпфайл:  добавил перенос стилей из css  добавил работу с блоками в вложенных папках  сложил иконки svg как отдельные блоки  html

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,24 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="./css/style.css">
-	<title>Blank tamplate</title>
+	<title>Finall maket</title>
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/my-Font.css">
 </head>
 <body>
-	<h1>Blank tamplate</h1>
+	
+	<div class="case" >
+	</div>
+	@import "header.html"
+	@import "banner.html" <!-- form -->
+	@import "panelFilter.html"
+	@import "main.html"
+	@import "reality.html"
+	@import "footer.html"
+
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 	<script src="./script/script.js"></script>
+
 </body>
 </html>
