-разбил стили на блоки - другие мелкие правки

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Finall maket</title>
+	<title>Duhoot</title>
+	<link rel="icon" type="image/png" href="./image/icon/logo_icon_16х16.png" sizes="16x16" />
+	<link rel="icon" type="image/png" href="./image/icon/logo_icon_32х32.png" sizes="32x32" />
+	
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/my-Font.css">
