--- a/src/blocks/header.html
+++ b/src/blocks/header.html
@@ -5,19 +5,19 @@
 			<nav class="nav header__nav">
 				<ul class="nav__menu">
 					<li class="nav__item">
-						<a class="nav__link" href="" class="nav__link">Reality</a>
+						<a class="nav__link" href="#" class="nav__link">Reality</a>
 					</li>
 					<li class="nav__item">
-						<a class="nav__link" href="" class="nav__link">Living</a>
+						<a class="nav__link" href="#" class="nav__link">Living</a>
 					</li>
 					<li class="nav__item">
-						<a  class="nav__link" href="" class="nav__link">EduCation</a>
+						<a  class="nav__link" href="#" class="nav__link">EduCation</a>
 					</li>
 					<li class="nav__item">
-						<a class="nav__link" href="" class="nav__link">Entertainment</a>
+						<a class="nav__link" href="#" class="nav__link">Entertainment</a>
 					</li>
 					<li class="nav__item">
-						<a class="nav__link" href="" class="nav__link">Mobility</a>
+						<a class="nav__link" href="#" class="nav__link">Mobility</a>
 					</li>
 				</ul>
 			</nav>
