--- a/src/blocks/panelFilter.html
+++ b/src/blocks/panelFilter.html
@@ -1,4 +1,5 @@
 <div class="filter">
+	<a name="real" ></a>
 	<div class="container filter__container">
 		<div  class="priority--cont">
 			<div class="priority">
