--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,21 @@
 	<link rel="icon" type="image/png" href="./image/icon/logo_icon_16х16.png" sizes="16x16" />
 	<link rel="icon" type="image/png" href="./image/icon/logo_icon_32х32.png" sizes="32x32" />
 	
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/normalize.css">
+	<!-- <link rel="stylesheet" href="css/normalize.css"> -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
 	<link rel="stylesheet" href="css/my-Font.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	
 	<div class="case" >
 	</div>
-	@import "header.html"
-	@import "banner.html" <!-- form -->
-	@import "panelFilter.html"
-	@import "main.html"
-	@import "reality.html"
-	@import "footer.html"
+		@import "header.html"
+		@import "banner.html" <!-- form -->
+		@import "panelFilter.html"
+		@import "main.html"
+		@import "reality.html"
+		@import "footer.html"
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 	<script src="./script/script.js"></script>
