- replaced icons on svg-sprite

--- a/src/blocks/banner.html
+++ b/src/blocks/banner.html
@@ -1,28 +1,8 @@
 <div class="form-Head">
-<div class="exper">
-			<svg class="iconSprite">
-				<use xlink:href="image/duhoot_sprite.svg#note_icon"></use>
-			</svg>
-			<svg class="iconSprite">
-				<use xlink:href="image/duhoot_sprite.svg#bus_icon"></use>
-			</svg>
-			<svg class="iconSprite">
-				<use xlink:href="image/duhoot_sprite.svg#hause_icon"></use>
-			</svg>
-			<svg class="iconSprite">
-				<use xlink:href="image/duhoot_sprite.svg#girl_icon"></use>
-			</svg>
-			<svg class="iconSprite">
-				<use xlink:href="image/duhoot_sprite.svg#cap_icon"></use>
-			</svg>
-		
-			<svg class="starIcon">
-				<use xlink:href="image/duhoot_sprite.svg#star_icon"></use>
-			</svg>
-			<svg class="starIcon starFill">
-				<use xlink:href="image/duhoot_sprite.svg#star_icon"></use>
-			</svg>
-</div>
+	<!-- sprites -->
+
+
+<!-- end sprites -->
 	
 		<div class="container form-Head__container">
 			<h1 class="heading form-Head__heading ">What are you looking for?</h1>
