--- a/src/blocks/header.html
+++ b/src/blocks/header.html
@@ -23,6 +23,10 @@
 			</nav>
 			<div class="search-log">
 				<div class="search ">
+					<svg class="search__icon">
+						<use xlink:href="image/duhoot_sprite.svg#saerch_icon"></use>
+					</svg>
+						
 					<!-- <input class="search__input" type="text" name="text" placeholder="LOGIN"/> -->
 				</div>
 				
