--- a/src/blocks/main.html
+++ b/src/blocks/main.html
@@ -1,45 +1,24 @@
 <div class="offers" >
 		<div class="container offers__container">
 			<div class="tiles offers__tiles">
-				<div class="tile-s tile-s--green">
-					<div class="imgHover">
-						<div class="tile-s__img">
-							<div class="bgColor"></div>
-							<div class="tile-s__cost">$2,990</div>
-						</div>
+				@import "card_small_bedroom.html"
+				@import "card_small_beachParty.html"
+				@import "card_small_busTrans.html"
+				@import "card_small_bedroom.html"
 
-						<div class="hov">
-							<a class="show hov__show" href="#">
-								<svg class="hov__search" height="13" viewBox="0 0 6.0854165 6.0854168" width="13" >
-										@import "search.html"
-								</svg>
-								Show more
-							</a>
-							<div class="estimate">
-								<svg height="16" viewBox="0 0 22.222222 4.1666667" width="85.33" >
-									@import "star.html"
-									
-								</svg>
-								<svg class="mas" height="22" viewBox="0 0 7.1437499 5.8208335" width="27" >
-									@import "mas.html"
-								</svg>
-							</div>
-						</div>
-					</div>
-						<div class="tile-s__cont">
-					<div class="circle-icon " ></div>
-						<div class="tile-s__descr">2 bedroom house for rent in Dubai</div>
-						<div class="tile-s__category">Vision Agency</div>
-						<div class="tile-s__asses">
-							<svg height="12" viewBox="0 0 22.222222 4.1666667" width="64" >
-								@import "star_litle.html"
-							</svg>
-							<span class="asses__response">(365)</span>
-						</div>
-					</div>
-				</div>
+				@import "card_large_bedroom.html"
+				@import "card_large_party.html"
 
-				<div class="tile-s tile-s--yellow">
+				@import "card_small_bedroom.html"
+				@import "card_small_beachParty.html"
+				@import "card_small_busTrans.html"
+				@import "card_small_bedroom.html"
+				
+				@import "card_large_bedroom.html"
+				@import "card_large_party.html"
+
+		
+				<!-- <div class="tile-s tile-s--yellow">
 						<div class="imgHover">
 							<div class="tile-s__img">
 								<div class="bgColor"></div>
@@ -48,16 +27,16 @@
 							<div class="hov">
 								<a class="show hov__show" href="#">
 									<svg class="hov__search" height="13" viewBox="0 0 6.0854165 6.0854168" width="13" >
-										@import "search.html"
+										// "search.html"
 									</svg>
 									Show more
 								</a>
 								<div class="estimate">
 									<svg height="16" viewBox="0 0 22.222222 4.1666667" width="85.33" >
-										@import "star.html"
+										// "star.html"
 									</svg>
 									<svg class="mas" height="22" viewBox="0 0 7.1437499 5.8208335" width="27" >
-										@import "mas.html"
+										// "mas.html"
 									</svg>
 								</div>
 							</div>
@@ -68,14 +47,14 @@
 						<div class="tile-s__category">Long beach</div>
 						<div class="tile-s__asses">
 							<svg height="12" viewBox="0 0 22.222222 4.1666667" width="64" >
-								@import "star_litle.html"
+								// "star_litle.html"
 							</svg>
 							<span class="asses__response">(1165)</span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
-				<div class="tile-s tile-s--purple">
+				<!-- <div class="tile-s tile-s--purple">
 						<div class="imgHover">
 							<div class="tile-s__img">
 								<div class="bgColor"></div>
@@ -84,16 +63,16 @@
 							<div class="hov">
 								<a class="show hov__show" href="#">
 									<svg class="hov__search" height="13" viewBox="0 0 6.0854165 6.0854168" width="13" >
-										@import "search.html"
+										// "search.html"
 									</svg>
 									Show more
 								</a>
 								<div class="estimate">
 									<svg height="16" viewBox="0 0 22.222222 4.1666667" width="85.33" >
-										@import "star.html"
+										// "star.html"
 									</svg>
 									<svg class="mas" height="22" viewBox="0 0 7.1437499 5.8208335" width="27" >
-										@import "mas.html"
+										// "mas.html"
 									</svg>
 								</div>
 							</div>
@@ -104,14 +83,14 @@
 						<div class="tile-s__category">Bus Trans</div>
 						<div class="tile-s__asses">
 							<svg height="12" viewBox="0 0 22.222222 4.1666667" width="64" >
-								@import "star_litle.html"
+								// "star_litle.html"
 							</svg>
 							<span class="asses__response">(365)</span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
-				<div class="tile-s tile-s--green">
+				<!-- <div class="tile-s tile-s--green">
 						<div class="imgHover">
 							<div class="tile-s__img">
 								<div class="bgColor"></div>
@@ -120,16 +99,16 @@
 							<div class="hov">
 								<a class="show hov__show" href="#">
 									<svg class="hov__search" height="13" viewBox="0 0 6.0854165 6.0854168" width="13" >
-										@import "search.html"
+										// "search.html"
 									</svg>
 									Show more
 								</a>
 								<div class="estimate">
 									<svg height="16" viewBox="0 0 22.222222 4.1666667" width="85.33" >
-										@import "star.html"
+										// "star.html"
 									</svg>
 									<svg class="mas" height="22" viewBox="0 0 7.1437499 5.8208335" width="27" >
-										@import "mas.html"
+										// "mas.html"
 									</svg>
 								</div>
 							</div>
@@ -140,22 +119,22 @@
 						<div class="tile-s__category">reality Agency</div>
 						<div class="tile-s__asses">
 							<svg height="12" viewBox="0 0 22.222222 4.1666667" width="64" >
-								@import "star_litle.html"
+								// "star_litle.html"
 							</svg>
 							<span class="asses__response">(165)</span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 				<!--        LARGE      -->
 
-				<div class="tile-l tile-l--green">
+				<!-- <div class="tile-l tile-l--green">
 					<div class="tile-l__img">
 						<div class="tile-l__category">
 							Vision agency
 							<div class="tile-l__asses">
 								<svg height="12" viewBox="0 0 22.222222 4.1666667" width="64" >
-									@import "star_litle.html"
+									// "star_litle.html"
 								</svg>
 								<span class="tile-l__response">(365)</span>
 							</div>
@@ -169,7 +148,7 @@
 						<div class="tile-l__btext">
 							<div class="btext__asses">
 								<svg height="16" viewBox="0 0 22.222222 4.1666667" width="85.33" >
-									@import "star_litle.html"
+									// "star_litle.html"
 								</svg>
 							</div>
 
@@ -181,15 +160,15 @@
 								<a class="tile-l__more" href="http://">...read more</a>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
-				<div class="tile-l tile-l--yellow">
+				<!-- <div class="tile-l tile-l--yellow">
 					<div class="tile-l__img">
 						<div class="tile-l__category">
 								Skybox club
 							<div class="tile-l__asses">
 								<svg height="12" viewBox="0 0 22.222222 4.1666667" width="64" >
-									@import "star_litle.html"
+									// "star_litle.html"
 								</svg>
 								<span class="tile-l__response">(1365)</span>
 							</div>
@@ -203,7 +182,7 @@
 						<div class="tile-l__btext">
 							<div class="btext__asses">
 								<svg height="16" viewBox="0 0 22.222222 4.1666667" width="85.33" >
-									@import "star_litle.html"
+									// "star_litle.html"
 								</svg>
 							</div>
 
@@ -214,9 +193,9 @@
 									<a class="tile-l__more" href="http://">...read more</a>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
-				<div class="tile-s tile-s--green">
+				<!-- <div class="tile-s tile-s--green">
 						<div class="imgHover">
 							<div class="tile-s__img">
 								<div class="bgColor"></div>
@@ -225,16 +204,16 @@
 							<div class="hov">
 								<a class="show hov__show" href="#">
 									<svg class="hov__search" height="13" viewBox="0 0 6.0854165 6.0854168" width="13" >
-										@import "search.html"
+										// "search.html"
 									</svg>
 									Show more
 								</a>
 								<div class="estimate">
 									<svg height="16" viewBox="0 0 22.222222 4.1666667" width="85.33" >
-										@import "star.html"
+										// "star.html"
 									</svg>
 									<svg class="mas" height="22" viewBox="0 0 7.1437499 5.8208335" width="27" >
-										@import "mas.html"
+										// "mas.html"
 									</svg>
 								</div>
 							</div>
@@ -245,14 +224,14 @@
 						<div class="tile-s__category">Vision Agency</div>
 						<div class="tile-s__asses">
 							<svg height="12" viewBox="0 0 22.222222 4.1666667" width="64" >
-								@import "star_litle.html"
+								// "star_litle.html"
 							</svg>
 							<span class="asses__response">(165)</span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
-				<div class="tile-s tile-s--yellow">
+				<!-- <div class="tile-s tile-s--yellow">
 						<div class="imgHover">
 							<div class="tile-s__img">
 								<div class="bgColor"></div>
@@ -261,16 +240,16 @@
 							<div class="hov">
 								<a class="show hov__show" href="#">
 									<svg class="hov__search" height="13" viewBox="0 0 6.0854165 6.0854168" width="13" >
-										@import "search.html"
+										// "search.html"
 									</svg>
 									Show more
 								</a>
 								<div class="estimate">
 									<svg height="16" viewBox="0 0 22.222222 4.1666667" width="85.33" >
-										@import "star.html"
+										// "star.html"
 									</svg>
 									<svg class="mas" height="22" viewBox="0 0 7.1437499 5.8208335" width="27" >
-										@import "mas.html"
+										// "mas.html"
 									</svg>
 								</div>
 							</div>
@@ -281,14 +260,14 @@
 						<div class="tile-s__category">Long beach</div>
 						<div class="tile-s__asses">
 							<svg height="12" viewBox="0 0 22.222222 4.1666667" width="64" >
-								@import "star_litle.html"
+								// "star_litle.html"
 							</svg>
 							<span class="asses__response">(1165)</span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
-				<div class="tile-s tile-s--purple">
+				<!-- <div class="tile-s tile-s--purple">
 						<div class="imgHover">
 							<div class="tile-s__img">
 								<div class="bgColor"></div>
@@ -297,16 +276,16 @@
 							<div class="hov">
 								<a class="show hov__show" href="#">
 									<svg class="hov__search" height="13" viewBox="0 0 6.0854165 6.0854168" width="13" >
-										@import "search.html"
+										// "search.html"
 									</svg>
 									Show more
 								</a>
 								<div class="estimate">
 									<svg height="16" viewBox="0 0 22.222222 4.1666667" width="85.33" >
-										@import "star.html"
+										// "star.html"
 									</svg>
 									<svg class="mas" height="22" viewBox="0 0 7.1437499 5.8208335" width="27" >
-										@import "mas.html"
+										// "mas.html"
 									</svg>
 								</div>
 							</div>
@@ -318,15 +297,15 @@
 						<div class="tile-s__category">Bus trans</div>
 						<div class="tile-s__asses">
 							<svg height="12" viewBox="0 0 22.222222 4.1666667" width="64" >
-								@import "star_litle.html"
+								// "star_litle.html"
 							</svg>
 							<span class="asses__response">(365)</span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 
-				<div class="tile-s tile-s--green">
+				<!-- <div class="tile-s tile-s--green">
 						<div class="imgHover">
 							<div class="tile-s__img">
 								<div class="bgColor"></div>
@@ -335,16 +314,16 @@
 							<div class="hov">
 								<a class="show hov__show" href="#">
 									<svg class="hov__search" height="13" viewBox="0 0 6.0854165 6.0854168" width="13" >
-										@import "search.html"
+										// "search.html"
 									</svg>
 									Show more
 								</a>
 								<div class="estimate">
 									<svg height="16" viewBox="0 0 22.222222 4.1666667" width="85.33" >
-										@import "star.html"
+										// "star.html"
 									</svg>
 									<svg class="mas" height="22" viewBox="0 0 7.1437499 5.8208335" width="27" >
-										@import "mas.html"
+										// "mas.html"
 									</svg>
 								</div>
 							</div>
@@ -355,21 +334,21 @@
 						<div class="tile-s__category">Reality Agency</div>
 						<div class="tile-s__asses">
 							<svg height="12" viewBox="0 0 22.222222 4.1666667" width="64" >
-								@import "star_litle.html"
+								// "star_litle.html"
 							</svg>
 							<span class="asses__response">(165)</span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 
-				<div class="tile-l tile-l--yellow">
+				<!-- <div class="tile-l tile-l--yellow">
 					<div class="tile-l__img">
 						<div class="tile-l__category">
 								Skybox club
 							<div class="tile-l__asses">
 								<svg height="12" viewBox="0 0 22.222222 4.1666667" width="64" >
-									@import "star_litle.html"
+									// "star_litle.html"
 								</svg>
 								<span class="tile-l__response">(1365)</span>
 							</div>
@@ -383,7 +362,7 @@
 						<div class="tile-l__btext">
 							<div class="btext__asses">
 								<svg height="16" viewBox="0 0 22.222222 4.1666667" width="85.33" >
-									@import "star_litle.html"
+									// "star_litle.html"
 								</svg>
 							</div>
 							<div class="tile-l__name">Peter145</div>
@@ -393,10 +372,10 @@
 									<a class="tile-l__more" href="http://">...read more</a>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 
-				<div class="tile-s tile-s--green">
+				<!-- <div class="tile-s tile-s--green">
 					<div class="imgHover">
 						<div class="tile-s__img">
 							<div class="bgColor"></div>
@@ -405,15 +384,15 @@
 						<div class="hov">
 							<a class="show hov__show" href="#">
 								<svg class="hov__search" height="13" viewBox="0 0 6.0854165 6.0854168" width="13" >
-									@import "search.html"
+									// "search.html"
 								</svg>
 								Show more
 							</a>
 							<div class="estimate">
 								<svg height="16" viewBox="0 0 22.222222 4.1666667" width="85.33" >
-									@import "star.html"
+									// "star.html"
 								</svg><svg class="mas" height="22" viewBox="0 0 7.1437499 5.8208335" width="27" >
-									@import "mas.html"
+									// "mas.html"
 								</svg>
 							</div>
 						</div>
@@ -424,15 +403,15 @@
 						<div class="tile-s__category">Vision Agency</div>
 						<div class="tile-s__asses">
 							<svg height="12" viewBox="0 0 22.222222 4.1666667" width="64" >
-								@import "star_litle.html"
+								// "star_litle.html"
 							</svg>
 							<span class="asses__response">(165)</span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 
-				<div class="tile-s tile-s--yellow">
+				<!-- <div class="tile-s tile-s--yellow">
 					<div class="imgHover">
 						<div class="tile-s__img">
 							<div class="bgColor"></div>
@@ -441,31 +420,31 @@
 						<div class="hov">
 							<a class="show hov__show" href="#">
 								<svg class="hov__search" height="13" viewBox="0 0 6.0854165 6.0854168" width="13" >
-									@import "search.html"
+									// "search.html"
 								</svg>
 								Show more
 							</a>
 							<div class="estimate">
 								<svg height="16" viewBox="0 0 22.222222 4.1666667" width="85.33" >
-									@import "star.html"
+									// "star.html"
 								</svg><svg class="mas" height="22" viewBox="0 0 7.1437499 5.8208335" width="27" >
-									@import "mas.html"
+									// "mas.html"
 								</svg>
 							</div>
 						</div>
 					</div>
-							<div class="tile-s__cont">
+					<div class="tile-s__cont">
 						<div class="circle-icon" ></div>
 						<div class="tile-s__descr">Beach party festival 2014</div>
 						<div class="tile-s__category">Long beach</div>
 						<div class="tile-s__asses">
 							<svg height="12" viewBox="0 0 22.222222 4.1666667" width="64" >
-								@import "star_litle.html"
+								// "star_litle.html"
 							</svg>
 							<span class="asses__response">(1165)</span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 
 			</div>
