--- a/src/blocks/panelFilter.html
+++ b/src/blocks/panelFilter.html
@@ -24,11 +24,31 @@
 
 		<div class="filterBut">
 			<span class="filtText">Filter:</span>
-			<a href="#" class="cirBut-small green hause"></a>
-			<a href="#" class="cirBut-small gray girl"></a>
-			<a href="#" class="cirBut-small gray cap"></a>
-			<a href="#" class="cirBut-small yellow note"></a>
-			<a href="#" class="cirBut-small purple bus"></a>
+			<a href="#" class="cirBut-small green">
+				<svg class="iconFilter">
+					<use xlink:href="image/duhoot_sprite.svg#hause_icon"></use>
+				</svg>
+			</a>
+			<a href="#" class="cirBut-small gray">
+				<svg class="iconFilter">
+					<use xlink:href="image/duhoot_sprite.svg#girl_icon"></use>
+				</svg>
+			</a>
+			<a href="#" class="cirBut-small gray ">
+				<svg class="iconFilter">
+					<use xlink:href="image/duhoot_sprite.svg#cap_icon"></use>
+				</svg>
+			</a>
+			<a href="#" class="cirBut-small yellow ">
+				<svg class="iconFilter">
+					<use xlink:href="image/duhoot_sprite.svg#note_icon"></use>
+				</svg>
+			</a>
+			<a href="#" class="cirBut-small purple">
+				<svg class="iconFilter">
+					<use xlink:href="image/duhoot_sprite.svg#bus_icon"></use>
+				</svg>
+			</a>
 		</div>
 	</div>
 </div>
