- fixed a lot of bug html

--- a/src/blocks/banner.html
+++ b/src/blocks/banner.html
@@ -1,36 +1,31 @@
 <div class="form-Head">
-	<!-- sprites -->
-
-
-<!-- end sprites -->
-	
-		<div class="container form-Head__container">
-			<h1 class="heading form-Head__heading ">What are you looking for?</h1>
-			<form class="data">
-				<div class="select data__select">
-					<div class="districs arrow-hover">
-						<a href="#" class="slct slct_d hover-white ">District</a>
-						<ul class="drop drop_d">
-							<li class="drop__item did" ><a class="drop__link" href="#">Sharjah</a></li>
-							<li class="drop__item did" ><a class="drop__link" href="#">Dubai</a></li>
-							<li class="drop__item did" ><a class="drop__link" href="#">Umm Al Quwain</a></li>
-							<li class="drop__item did" ><a class="drop__link" href="#">Al Samkh</a></li>
-						</ul>
-						<input type="hidden" id="select_d" />
-					</div>
-					<div class="educat arrow-hover">
-						<a href="#" class="slct slct_e hover-white">Education</a>
-						<ul class="drop drop_e">
-							<li class="drop__item die" ><a class="drop__link " href="#">Student</a></li>
-							<li class="drop__item die" ><a class="drop__link" href="#">Tourist</a></li>
-							<li class="drop__item die" ><a class="drop__link" href="#">Businessman</a></li>
-							<li class="drop__item die" ><a class="drop__link" href="#">Halvomes</a></li>
-						</ul>
-						<input type="hidden" id="select_e" />
-					</div>
+	<div class="container form-Head__container">
+		<h1 class="heading form-Head__heading ">What are you looking for?</h1>
+		<form class="data">
+			<div class="select data__select">
+				<div class="districs arrow-hover">
+					<a href="#" class="slct slct_d hover-white ">District</a>
+					<ul class="drop drop_d">
+						<li class="drop__item did" ><a class="drop__link" href="#">Sharjah</a></li>
+						<li class="drop__item did" ><a class="drop__link" href="#">Dubai</a></li>
+						<li class="drop__item did" ><a class="drop__link" href="#">Umm Al Quwain</a></li>
+						<li class="drop__item did" ><a class="drop__link" href="#">Al Samkh</a></li>
+					</ul>
+					<input type="hidden" id="select_d" />
 				</div>
-				<input class="input data__input hover-white" type="text" name="text" placeholder="Keyword, name, date, ..."/>
-				<button class="button button--mod data__button" type="submit" alt="Search">Search</button>
-			</form>
-		</div>
+				<div class="educat arrow-hover">
+					<a href="#" class="slct slct_e hover-white">Education</a>
+					<ul class="drop drop_e">
+						<li class="drop__item die" ><a class="drop__link " href="#">Student</a></li>
+						<li class="drop__item die" ><a class="drop__link" href="#">Tourist</a></li>
+						<li class="drop__item die" ><a class="drop__link" href="#">Businessman</a></li>
+						<li class="drop__item die" ><a class="drop__link" href="#">Halvomes</a></li>
+					</ul>
+					<input type="hidden" id="select_e" />
+				</div>
+			</div>
+			<input class="input data__input hover-white" type="text" name="text" placeholder="Keyword, name, date, ..."/>
+			<button class="button button--mod data__button" type="submit" >Search</button>
+		</form>
 	</div>
+</div>
