--- a/src/blocks/footer.html
+++ b/src/blocks/footer.html
@@ -3,7 +3,7 @@
 		<h3 class="footer__heading">Subscribe to our newsletter</h3>
 		<div class="footer__form">
 			<input class="input footer__input footer__input--icon hover-white" type="text" name="text" placeholder="your@email.com"/>
-			<button class="button button--mod footer__button footer__button--foot " type="submit" alt="Search">Search</button>
+			<button class="button button--mod footer__button footer__button--foot " type="submit">Search</button>
 		</div>
 		<div class="contact footer__contact">
 			<div class="contact__container">
@@ -28,18 +28,18 @@
 					</ul>
 				</nav>
 				<div class="follow">
-						<h4 class="footNav__Head">Follow us </h4>
-						<div class="follow__icon">
-							<a href="#" class="follow__link icon-facebook"  class="follow__link">
-							</a>
-							<a href="#" class="follow__link icon-twitter">
-							</a>
-							<a href="#" class="follow__link icon-googleplus">
-							</a>
-							<a href="#" class="follow__link icon-youtube">
-							</a>
-						</div>
-						<p class="copyright">Copyright © All Rights reserved</p>
+					<h4 class="footNav__Head">Follow us </h4>
+					<div class="follow__icon">
+						<a href="#" class="follow__link icon-facebook"  class="follow__link">
+						</a>
+						<a href="#" class="follow__link icon-twitter">
+						</a>
+						<a href="#" class="follow__link icon-googleplus">
+						</a>
+						<a href="#" class="follow__link icon-youtube">
+						</a>
+					</div>
+					<p class="copyright">Copyright © All Rights reserved</p>
 				</div>
 			</div>
 		</div>
