--- a/src/blocks/header.html
+++ b/src/blocks/header.html
@@ -5,19 +5,19 @@
 			<nav class="nav header__nav">
 				<ul class="nav__menu">
 					<li class="nav__item">
-						<a class="nav__link" href="#" class="nav__link">Reality</a>
+						<a class="nav__link" href="#">Reality</a>
 					</li>
 					<li class="nav__item">
-						<a class="nav__link" href="#" class="nav__link">Living</a>
+						<a class="nav__link" href="#">Living</a>
 					</li>
 					<li class="nav__item">
-						<a  class="nav__link" href="#" class="nav__link">EduCation</a>
+						<a class="nav__link" href="#">EduCation</a>
 					</li>
 					<li class="nav__item">
-						<a class="nav__link" href="#" class="nav__link">Entertainment</a>
+						<a class="nav__link" href="#">Entertainment</a>
 					</li>
 					<li class="nav__item">
-						<a class="nav__link" href="#" class="nav__link">Mobility</a>
+						<a class="nav__link" href="#">Mobility</a>
 					</li>
 				</ul>
 			</nav>
@@ -26,8 +26,6 @@
 					<svg class="search__icon">
 						<use xlink:href="image/duhoot_sprite.svg#saerch_icon"></use>
 					</svg>
-						
-					<!-- <input class="search__input" type="text" name="text" placeholder="LOGIN"/> -->
 				</div>
 				
 				<div class="login">
