--- a/src/blocks/panelFilter.html
+++ b/src/blocks/panelFilter.html
@@ -1,7 +1,6 @@
 <div class="filter">
-	<a name="real" ></a>
 	<div class="container filter__container">
-		<div  class="priority--cont">
+		<div class="priority--cont">
 			<div class="priority">
 				<a href="#" class="sort-item">Recommended</a>
 				<a href="#" class="sort-item">latest</a>
@@ -12,14 +11,14 @@
 			<div class="butSelelct__districs arrow-hover">
 				<a href="#" class="slct butSelelct__slct slct_d hover-white ">District</a>
 				<ul class="drop drop_d">
-					<li class="drop__item did" ><span class="drop__link" href="#">Sharjah</span></li>
-					<li class="drop__item did" ><span class="drop__link" href="#">Dubai</span></li>
-					<li class="drop__item did" ><span class="drop__link" href="#">Umm Al Quwain</span></li>
-					<li class="drop__item did" ><span class="drop__link" href="#">Al Samkh</span></li>
+					<li class="drop__item did" ><a class="drop__link" href="#">Sharjah</a></li>
+					<li class="drop__item did" ><a class="drop__link" href="#">Dubai</a></li>
+					<li class="drop__item did" ><a class="drop__link" href="#">Umm Al Quwain</a></li>
+					<li class="drop__item did" ><a class="drop__link" href="#">Al Samkh</a></li>
 				</ul>
 				<input type="hidden" id="select_d" />
 			</div>
-			<button class="button  butSelelct__button-filt " type="submit" alt="Search">hide map</button>
+			<button class="button butSelelct__button-filt" type="submit">hide map</button>
 		</div>
 
 		<div class="filterBut">
