--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,12 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
-	<div class="case" >
-	</div>
-		@import "header.html"
-		@import "banner.html" <!-- form -->
-		@import "panelFilter.html"
-		@import "main.html"
-		@import "reality.html"
-		@import "footer.html"
+	@import "header.html"
+<!-- 	import "banner.html"
+	import "panelFilter.html"
+	import "main.html"
+	import "reality.html"
+	import "footer.html" -->
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 	<script src="./script/script.js"></script>
