- added plugin to gulpfile - gulp-rigger

--- a/src/blocks/card_large_party.html
+++ b/src/blocks/card_large_party.html
@@ -54,7 +54,7 @@
 			<div class="tile-l__text">
 				“Aliquam quis pulvinar purus. Etiam cursus ipsum quis enim faucibus, quis posuere orci ornare. Duis mattis sagittis fringilla.” 
 			</div>
-			<a class="tile-l__more" href="http://">...read more</a>
+			<a class="tile-l__more" href="#">...read more</a>
 		</div>
 	</div>
 </div>
