--- a/src/blocks/footer.html
+++ b/src/blocks/footer.html
@@ -30,7 +30,7 @@
 				<div class="follow">
 					<h4 class="footNav__Head">Follow us </h4>
 					<div class="follow__icon">
-						<a href="#" class="follow__link icon-facebook"  class="follow__link">
+						<a href="#" class="follow__link icon-facebook">
 						</a>
 						<a href="#" class="follow__link icon-twitter">
 						</a>
