--- a/src/blocks/main.html
+++ b/src/blocks/main.html
@@ -1,24 +1,24 @@
 <div class="offers" >
 	<div class="container offers__container">
 		<div class="tiles offers__tiles">
-			@import "card_small_bedroom.html"
-			@import "card_small_beachParty.html"
-			@import "card_small_busTrans.html"
-			@import "card_small_bedroom.html"
+			//= card_small_bedroom.html
+			//= card_small_beachParty.html
+			//= card_small_busTrans.html
+			//= card_small_bedroom.html
 
-			@import "card_large_bedroom.html"
-			@import "card_large_party.html"
+			//= card_large_bedroom.html
+			//= card_large_party.html
 
-			@import "card_small_bedroom.html"
-			@import "card_small_beachParty.html"
-			@import "card_small_bedroom.html"
-			@import "card_small_busTrans.html"
+			//= card_small_bedroom.html
+			//= card_small_beachParty.html
+			//= card_small_bedroom.html
+			//= card_small_busTrans.html
 			
-			@import "card_large_bedroom.html"
-			@import "card_small_bedroom.html"
+			//= card_large_bedroom.html
+			//= card_small_bedroom.html
 			
-			@import "card_small_busTrans.html"
-			@import "card_large_party.html"
+			//= card_small_busTrans.html
+			//= card_large_party.html
 		</div>
 		<div class="offers__border">
 			<a href="#" class="more offers__more">Load more</a>
