- added script select

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 	
 	<!-- <link rel="stylesheet" href="css/normalize.css"> -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
-	<link rel="stylesheet" href="css/my-Font.css">
+	<!-- <link rel="stylesheet" href="css/my-Font.css"> -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -21,8 +21,7 @@
 	//= blocks/reality.html
 	//= blocks/footer.html
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-	<script src="./script/script.js"></script>
+	<script src="script/script.js"></script>
 
 </body>
 </html>
