- added script select

--- a/src/blocks/panelFilter.html
+++ b/src/blocks/panelFilter.html
@@ -1,53 +1,53 @@
 <div class="filter">
 	<div class="container filter__container">
 		<div class="priority--cont">
-			<div class="priority">
-				<a href="#" class="sort-item">Recommended</a>
-				<a href="#" class="sort-item">latest</a>
-				<a href="#" class="sort-item">Highlights</a>
-			</div>
+			<spa class="priority">
+				<span class="sort-item">Recommended</span>
+				<span class="sort-item">latest</span>
+				<span class="sort-item">Highlights</span>
+			</a>
 		</div>
 		<div class="butSelelct">
-			<div class="butSelelct__districs arrow-hover">
-				<a href="#" class="slct butSelelct__slct slct_d hover-white ">District</a>
+			<div class="butSelelct__districs arrow-hover menuSelect">
+				<div class="slct butSelelct__slct slct_d hover-white ">District</div>
 				<ul class="drop drop_d">
-					<li class="drop__item did" ><a class="drop__link" href="#">Sharjah</a></li>
-					<li class="drop__item did" ><a class="drop__link" href="#">Dubai</a></li>
-					<li class="drop__item did" ><a class="drop__link" href="#">Umm Al Quwain</a></li>
-					<li class="drop__item did" ><a class="drop__link" href="#">Al Samkh</a></li>
+					<li class="drop__item drop_i" >Sharjah</li>
+					<li class="drop__item drop_i" >Dubai</li>
+					<li class="drop__item drop_i" >Umm Al Quwain</li>
+					<li class="drop__item drop_i" >Al Samkh</li>
 				</ul>
-				<input type="hidden" id="select_d" />
+				<input class="input_d" type="hidden"/>
 			</div>
 			<button class="button butSelelct__button-filt" type="submit">hide map</button>
 		</div>
 
 		<div class="filterBut">
 			<span class="filtText">Filter:</span>
-			<a href="#" class="cirBut-small green">
+			<div class="cirBut-small green">
 				<svg class="iconFilter">
 					<use xlink:href="image/duhoot_sprite.svg#hause_icon"></use>
 				</svg>
-			</a>
-			<a href="#" class="cirBut-small gray">
+			</div>
+			<div class="cirBut-small gray">
 				<svg class="iconFilter">
 					<use xlink:href="image/duhoot_sprite.svg#girl_icon"></use>
 				</svg>
-			</a>
-			<a href="#" class="cirBut-small gray ">
+			</div>
+			<div class="cirBut-small gray ">
 				<svg class="iconFilter">
 					<use xlink:href="image/duhoot_sprite.svg#cap_icon"></use>
 				</svg>
-			</a>
-			<a href="#" class="cirBut-small yellow ">
+			</div>
+			<div class="cirBut-small yellow ">
 				<svg class="iconFilter">
 					<use xlink:href="image/duhoot_sprite.svg#note_icon"></use>
 				</svg>
-			</a>
-			<a href="#" class="cirBut-small purple">
+			</div>
+			<div class="cirBut-small purple">
 				<svg class="iconFilter">
 					<use xlink:href="image/duhoot_sprite.svg#bus_icon"></use>
 				</svg>
-			</a>
+			</div>
 		</div>
 	</div>
 </div>
