- fixed problem with svg-sprites

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,8 @@
 	//= blocks/main.html
 	//= blocks/reality.html
 	//= blocks/footer.html
-
+	<!-- //= locks/svgSprite.html
+	 -->
 	<script src="script/script.js"></script>
 
 </body>
